# rust-todo-graphq-mongodb

./: .project  Cargo.toml
src/: context.rs  main.rs  models.rs  mongodb.rs  schema.rs
src/data/: bsondata.rs  todos.bson
