[package]
name = "todo-task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#todos = "src/todos/lib.rs"
#broker = "src/simple_broker.rs" 

axum = "0.6.11"
async-graphql = "5.0.6" 
async-graphql-axum = "5.0.6"
slab = "0.4.2"
futures-util = "0.3.0"
futures-channel = "0.3.0"
once_cell = "1.0"
futures-timer = "3.0.2"
async-stream = "0.3.0"
tokio = { version = "1.26.0", features = ["full"] }
