[package]
name = "todo-task3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = "0.6.11"
async-graphql = "5.0.6" 
async-graphql-axum = "5.0.6"
slab = "0.4.2"
futures-util = "0.3.0"
futures-channel = "0.3.0"
once_cell = "1.0"
futures-timer = "3.0.2"
async-stream = "0.3.0"
tokio = { version = "1.26.0", features = ["full"] }
csv = "1.2.1"
chrono = "0.4.24"
serde = "1.0.158"
derive = "1.0.0"
bson = "2.6.1"
mongodb = "2.4.0"
dotenv = "0.15.0"
error = "0.1.9"

#chrono = { version = "0.4.24", features=["serde"] } csv = "1.1" serde = { version = "1.0.158", features = ["derive"] }